welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:6: error: illegal start of simple expression
  if (z==y) {
  ^